added stlye and readme

--- a/index.html
+++ b/index.html
@@ -3,10 +3,17 @@
   <head>
     <title>Letter Game</title>
     <style>
+        body {background-color: rgb(255,35,0);}
         h1 {font-size: 500%; display: inline;}
         h2 {font-size: 500%; display: inline;}
-        p {font-size: 500%; display: inline;}
-</style>
+        p {font-size: 500%;
+          text-align: center;
+          border: 5px solid black;
+          background-color: rgb(196,120,255);}
+        h3 {text-align: center;
+            border: 1px solid black;
+            background-color: lightblue;}
+    </style>
 
   </head>
 
@@ -17,6 +24,7 @@
       <h2>Time:</h2>
       <h2 id="time"></h2><br><br>
       <h2 id="final"></h2><br><br>
+      <h3>Instructions: As the letters appear, type them as fast as you can. You have 30 seconds to type as many correct letters as you can. Any wrong answers will cost 1 point. </h3>
       <script src="index.js"> </script>
       <script src="index.css"> </script>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
