--- a/index.html
+++ b/index.html
@@ -2,19 +2,7 @@
 <html>
   <head>
     <title>Letter Game</title>
-    <style>
-        body {background-color: rgb(255,35,0);}
-        h1 {font-size: 500%; display: inline;}
-        h2 {font-size: 500%; display: inline;}
-        p {font-size: 500%;
-          text-align: center;
-          border: 5px solid black;
-          background-color: rgb(196,120,255);}
-        h3 {text-align: center;
-            border: 1px solid black;
-            background-color: lightblue;}
-    </style>
-
+      <link rel="stylesheet" type="text/css" href="index.css">
   </head>
 
   <body>
